--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>การสร้าง Frame พื้นฐาน</title>
+    <title>ญี่ปุ่น japan</title>
 </head>
 <frameset rows="35%,*">
  <frame name=top noresize scroling=no src="หัวข้อเหมียวส์.png">
